<?xml version="1.0"?>
<package format="3">
  <name>my_robot_localization</name>
  <version>0.0.0</version>
  <description>My robot localization package</description>
  <maintainer email="your_email@example.com">Your Name</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <depend>rclcpp</depend>
  <depend>robot_localization</depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
